--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   </url>
 	<properties>
 		<age>1</age>
-		<server-version>2.6.2</server-version>
+		<server-version>2.7.0</server-version>
 		<interface-version>2.0.2</interface-version>
 		<glite-services-namespace> http://glite.org/wsdl/services</glite-services-namespace>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,6 +29,7 @@
 		<trustmanager-axis.version>1.0.0</trustmanager-axis.version>
 		<opensaml.version>2.4.1</opensaml.version>
 		<package.catalina_home>${env.CATALINA_HOME}</package.catalina_home>
+		<jetty.version>6.1.26</jetty.version>
 	</properties>
 	
 	<developers>
@@ -160,12 +161,18 @@
 							<goal>war</goal>
 						</goals>
 						<configuration>
-							<packagingExcludes>WEB-INF/lib/resolver-*.jar,
-								WEB-INF/lib/serializer-*.jar,
-								WEB-INF/lib/xercesImpl-*.jar,
-								WEB-INF/lib/xml-apis-*.jar,
-								WEB-INF/lib/xalan-*.jar
-							</packagingExcludes>
+						<packagingIncludes>
+							common/**/*,
+							img/**/*,
+							struts/**/*,
+							style/**/*,
+							META-INF/**/*,
+							WEB-INF/classes/**/*,
+							WEB-INF/p/**/*,
+							WEB-INF/*,
+							WEB-INF/lib/logback-*,
+							WEB-INF/lib/slf4j-*
+						</packagingIncludes>
 							<webResources>
 								<resource>
 									<directory>src/main/resources</directory>
@@ -344,7 +351,6 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>2.0</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
@@ -565,6 +571,33 @@
 			<version>0.9.18</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-java5-threadpool</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-sslengine</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-util</artifactId>
+			<version>${jetty.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.struts</groupId>
+			<artifactId>struts2-config-browser-plugin</artifactId>
+			<version>${struts.version}</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
