Request mapping engine + database refactoring (removed old unused tables)

--- a/resources/templates/service.properties
+++ b/resources/templates/service.properties
@@ -95,6 +95,11 @@ voms.disable_membership_end_time = $disable_membership_end_time
 ## request.
 voms.request.vo_membership.enable_attribute_requests = $enable_attribute_requests
 
+## Defines the name of the role that when assigned to VO members will grant 
+## group manager privileges. Group managers can manage VO membership requests,
+## group membership and role membership requests on behalf of the VO admin.
+voms.group_manager_role = $group_manager_role
+
 ## Time (in seconds) that unconfirmed membership requests are kept
 ## inside the voms database.
 voms.request.vo_membership.lifetime = $membership_request_lifetime
